--- a/css/common.css
+++ b/css/common.css
@@ -234,11 +234,69 @@ button {
 /* ***************************************************************************** */
 
 /* ******************************** TASK 6 ************************************* */
-.controls {
-  display: inline-flex;
-  padding: 24px;
-  flex-direction: column;
+#controls {
+  display: flex;
+  padding: 32px;
   align-items: flex-start;
   gap: 16px;
+  border-radius: 8px;
+  background: #f6f6fe;
+  width: 486px;
+}
+
+#controls > input {
+  padding: 8px 72px;
+  border-radius: 8px;
+  border: 1px solid #808080;
+  color: #2e2f42;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+}
+
+#controls > button {
+  display: flex;
+  width: 120px;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border: none;
+  border-radius: 8px;
+  width: 120px;
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+}
+
+#controls :nth-child(2) {
+  background-color: #4e75ff;
+}
+
+#controls :nth-child(2):hover {
+  background-color: #6c8cff;
+}
+
+#controls :last-child {
+  background-color: #ff4e4e;
+}
+
+#controls :last-child:hover {
+  background-color: #ff7070;
+}
+
+#boxes {
+  display: flex;
+  width: 486px;
+  padding: 32px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 8px;
+  background: #f6f6fe;
+  width: 486px;
 }
 /* ***************************************************************************** */
